# after-effects-mcp

./: .gitattributes  .gitignore  .mcp.json.template  AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  README.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: capability-package.md
.github/workflows/: attestation.yml  build-rc.yml  ci.yml  release.yml
aebm_mcp/: __init__.py  __main__.py  bridge.py  progress.py  schemas.py  server.py  snapshot.py
aebm_mcp/handlers/: __init__.py  core.py  typed.py
aebm_mcp/jsx_templates/: set_time.jsx
after_effects_mcp/: __init__.py  __main__.py  bridge.py  progress.py  schemas.py  server.py  snapshot.py
after_effects_mcp/handlers/: __init__.py  core.py  typed.py
after_effects_mcp/jsx_templates/: create_layer.jsx  get_properties.jsx  inspect_property_capabilities.jsx  revert.jsx  select_layers.jsx
docs/: ATOM_PARITY_ROADMAP.md  CAPABILITY_PACKAGE_WORKFLOW.md  INSTALL.md  REFERENCE.md  RELEASE.md  RUNTIME_MANAGER.md  WINDOWS_CODEX_RC_PROMPT.md  WORKFLOW.md
docs/capability-packages/: issue157-keyframe-authoring.md
docs/checkpoints/: 2026-07-11-freeze.md  2026-07-16-worktree-audit.md
docs/handoffs/: WINDOWS_CODEX_DEVELOPMENT_HANDOFF_2026-07-11.md
docs/native-sdk/: SDK_INPUTS.md
docs/platform/: PHASE0.md  PLATFORM_HELPER_SECURITY.md
docs/release-notes/: v0.9.2-zh-CN.md
docs/superpowers/plans/: 2026-04-27-atommcp-parity.md  2026-04-27-live-verification.md  2026-04-27-spec-3a-backend-abstraction.md  2026-04-27-spec-4a-hello-plugin.md  2026-07-03-panel-credential-channels.md  2026-07-10-cross-platform-foundation.md  2026-07-10-dual-platform-release.md  2026-07-10-four-goal-execution-index.md  2026-07-10-provider-route-closure.md  2026-07-10-tool-library.md
docs/superpowers/specs/: 2026-04-27-atommcp-parity-design.md  (+4 more)
docs/templates/: capability-package-completion.md
native/ae-plugin/: build-macos.mjs  install-dev-macos.mjs  verify-macos.mjs
native/platform-helper/client-addon/: CMakeLists.txt
native/platform-helper/client-addon/src/: addon_macos.mm  addon_windows.cpp  common.cpp  common.hpp  win_delay_load_hook.cpp
native/platform-helper/windows/: CMakeLists.txt
native/platform-helper/windows/Tests/: platform-helper-addon-live.test.mjs  platform-helper-static.test.mjs
native/platform-helper/windows/src/: launcher.cpp  main.cpp
packaging/: ae-sdk-inputs.json  helper-identity-policy.json  license-policy.json  native-coverage-approvals.json  node-runtime-bom.json  product-acceptance-coverage.json  python-standalone-bom.json  runtime-license-approvals.json  runtime-lock.json  support-matrix.json
packaging/schemas/: ae-sdk-inputs.schema.json  bundle-manifest.schema.json  license-inventory.schema.json  native-plugin-manifest.schema.json  node-runtime-bom.schema.json  phase0-evidence.schema.json  python-standalone-bom.schema.json  runtime-manifest.schema.json  runtime-sbom.schema.json  support-matrix.schema.json
plugin/: .debug
plugin/CSXS/: manifest.xml
plugin/client/: .gitignore  CSInterface.js  client.js  index.html  styles.css
plugin/host/: activity.js  activity.test.js  auth-token.js  jsx-bridge.js  jsx-bridge.test.js  native-aegp-client.js  native-aegp-client.test.js  native-project-composition-contract.js  native-project-composition-contract.test.js  package-lock.json  package.json  platform-helper-client.js  platform-helper-client.test.js  platform-helper-transport.js  platform-helper-transport.test.js  runtime-easekeys.test.js  runtime-safevalue.test.js  server.js  server.test.js
plugin/jsx/: runtime.jsx
plugin/panel/: build.mjs  package-lock.json  package.json
plugin/shared/: tool-approval.mjs
plugin/sidecar/: agent-sidecar.mjs  lib.mjs  package-lock.json  package.json
scripts/: check-repository-governance.mjs  demo_ball_roll.py  install-plugin-dev-macos.sh  install-plugin-dev.ps1  live-model-matrix.mjs  package-zxp.ps1  provider-matrix-live.mjs  provider-matrix-live.test.mjs  start-platform-helper-dev.ps1
scripts/hardware/: README.md  capability_package_cli.py  capability_package_identity.py  capability_package_runtime.py  issue150_project_composition_acceptance.py  issue155_layer_timeline_acceptance.py  issue157_keyframe_authoring_acceptance.py  issue157_keyframe_authoring_spec.py  issue162_layer_compositing_acceptance.py  issue162_layer_compositing_spec.py  issue165_layer_transform_acceptance.py  issue165_layer_transform_spec.py  issue167_native_media_acceptance.py  issue167_native_media_spec.py
scripts/package/: ae-sdk-input.mjs  build-platform-helper.mjs  build-portable-runtime.mjs  build-zxp.mjs  freeze-signed-manifests.mjs  generate-runtime-inventory.mjs  macos-signing-xattrs.mjs  package-macos-dmg.sh  sign-macos-nested.sh  sign-windows-nested.ps1  signing-plan.mjs  stage-platform-bundle.mjs  verify-platform-bundle.mjs
scripts/phase0/: assert-helper-rejected.mjs  collect-phase0-evidence.mjs  run-signing-probe-macos.sh  run-signing-probe-windows.ps1  verify-signing-evidence.mjs
scripts/release/: artifact-manifest.mjs  attestation.mjs  check-provenance.mjs  comment-marker.mjs  github-inventory.mjs  native-coverage-gate.mjs  run-signing-plan.mjs  signing-report.mjs  smoke-installed-runtime.mjs  validate-attestation-comment.mjs  verify-rc-macos.sh  verify-rc-windows.ps1  verify-release-inputs.mjs  write-attestation.mjs
tests/: conftest.py  test_bridge.py  test_checkpoint_store.py  test_handlers_core.py  test_handlers_typed.py  test_progress.py  test_schemas.py  test_snapshot.py
tests/live/: conftest.py  test_checkpoint_cycle.py  test_read_verbs.py  test_smoke.py
(+403 files in other folders)
