[project]
name = "aebm-mcp"
version = "0.6.2"
description = "MCP server for BlendifyAE (AEBM) — 15 verbs wrapping the aebm-file PowerShell bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "BlendifyAE" },
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aebm-mcp = "aebm_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aebm_mcp"]

[tool.hatch.build]
include = [
    "aebm_mcp/**/*.py",
    "aebm_mcp/jsx_templates/*.jsx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
